# privateML

./: .gitignore  CMakeLists.txt  README.md  combine_result.py  helper.h  model_bin.cpp  model_conti.cpp
data/: test_y.tsv
weights/: coeff1.txt  coeff2.txt  coeff3.txt  intercept1.txt  intercept2.txt  intercept3.txt  weight4.csv  weight5.csv  weights1.txt  weights2.txt  weights3.txt
